# pong

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindSDL2.cmake
include/: ball.h  display.h  player.h  texture.h
pong0/: CMakeLists.txt
pong0/src/: main.cpp
res/background/: Thumbs.db  field.psd
res/ball/: Thumbs.db  ball.psd
res/player/: Thumbs.db  player.psd
src/: ball.cpp  display.cpp  main.cpp  player.cpp  texture.cpp
